--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mawdoo3/waraqa",
+    "name": "mawdoo3-zukaili/waraqa",
     "description": "used to handle all articles that pulled from waraqa to mediawiki websites",
     "type": "project",
     "license": "MIT",
